MiniH: persistence xml updated

--- a/src/main/resources/cliente_module.properties
+++ b/src/main/resources/cliente_module.properties
@@ -27,7 +27,7 @@ msg.com.jobits.pos.null_pointer_EMF_not_Found = Entidad no encontrada, Contacte 
 ##
 
 com.jobits.pos.clienterepo.name = JoBits POS Cliente Repo Module
-com.jobits.pos.cliente.repol.util.persistence_unit_name = JoBits POS Cliente Repo PU
+com.jobits.pos.cliente.repo.util.persistence_unit_name = Jobits POS clientePU
 com.jobits.pos.cliente.repo.db.shema = cliente
 
 
